--- a/tools/Rmd/causal_model.Rmd
+++ b/tools/Rmd/causal_model.Rmd
@@ -15213,7 +15213,7 @@ human_maps_1Mb <- fread("real_data_maps/maps_1Mb_models.csv.gz") %>%
                                      constrained_model))
 
 # 10 kb
-for(m in unique(human_maps_1Mb$constrained_model)) { 
+for(m in unique(human_maps_10kb$constrained_model)) { 
 
   print(paste(m, Sys.Date(), Sys.time()), sep="\t")
   cat(paste("10kb", m))
@@ -15260,6 +15260,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                std.ov=T,
                std.lv=T,
                group="chrom",
+               group.equal="regressions",
                estimator="GLS")
   
   fwrite(rbind.data.frame(names(unlist(inspect(m0gls, "r2"))),
@@ -15278,6 +15279,35 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                "latents_", m, ".csv", sep=""),
          col.names=F)
   
+  m0gls_free <- sem(model_0,
+                    data=tbl_10kb,
+                    fixed.x=F,
+                    std.ov=T,
+                    std.lv=T,
+                    group="chrom",
+                    group.equal="none",
+                    estimator="GLS")
+  
+  fwrite(rbind.data.frame(names(unlist(inspect(m0gls_free, "r2"))),
+                          as.numeric(unlist(inspect(m0gls_free, "r2")))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG0_r2_10kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(parameterestimates(m0gls_free, ci=T), 
+         paste("real_data_maps/lavaan_out/YRI_DAG0_params_10kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""))
+  
+  fwrite(rbind.data.frame(names(fitMeasures(m0gls_free)),
+                          as.numeric(fitMeasures(m0gls_free))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG0_fitmeasures_10kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(lavTestLRT(m0gls, m0gls_free),
+         paste("real_data_maps/lavaan_out/LRT_DAG0_gw-equal-freechrom_10kb_", 
+               "latents_", m, ".csv", sep=""))
+  
   model_1 <- "
   avg_pi ~ start(0.25)*c1*avg_mut
   avg_pi ~ start(0.5)*c2*B
@@ -15293,6 +15323,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                std.ov=T,
                std.lv=T,
                group="chrom",
+               group.equal="regressions",
                estimator="GLS")
   
   fwrite(rbind.data.frame(names(unlist(inspect(m1gls, "r2"))),
@@ -15310,6 +15341,35 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
          paste("real_data_maps/lavaan_out/YRI_DAG1_fitmeasures_10kb_genomewide_", 
                "latents_", m, ".csv", sep=""),
          col.names=F)
+  
+  m1gls_free <- sem(model_1,
+                    data=tbl_10kb,
+                    fixed.x=F,
+                    std.ov=T,
+                    std.lv=T,
+                    group="chrom",
+                    group.equal="none",
+                    estimator="GLS")
+  
+  fwrite(rbind.data.frame(names(unlist(inspect(m1gls_free, "r2"))),
+                          as.numeric(unlist(inspect(m1gls_free, "r2")))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG1_r2_10kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(parameterestimates(m1gls_free, ci=T), 
+         paste("real_data_maps/lavaan_out/YRI_DAG1_params_10kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""))
+  
+  fwrite(rbind.data.frame(names(fitMeasures(m1gls_free)),
+                          as.numeric(fitMeasures(m1gls_free))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG1_fitmeasures_10kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(lavTestLRT(m1gls, m1gls_free),
+         paste("real_data_maps/lavaan_out/LRT_DAG1_gw-equal-freechrom_10kb_", 
+               "latents_", m, ".csv", sep=""))
   
   model_2 <- "
   avg_pi ~ start(0.25)*c1*avg_mut
@@ -15332,6 +15392,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                std.ov=T,
                std.lv=T,
                group="chrom",
+               group.equal="regressions",
                estimator="GLS")
   
   fwrite(rbind.data.frame(names(unlist(inspect(m2gls, "r2"))),
@@ -15350,17 +15411,48 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                "latents_", m, ".csv", sep=""),
          col.names=F)
   
+  m2gls_free <- sem(model_2,
+                    data=tbl_10kb,
+                    fixed.x=F,
+                    std.ov=T,
+                    std.lv=T,
+                    group="chrom",
+                    group.equal="none",
+                    estimator="GLS")
+  
+  fwrite(rbind.data.frame(names(unlist(inspect(m2gls_free, "r2"))),
+                          as.numeric(unlist(inspect(m2gls_free, "r2")))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG2_r2_10kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(parameterestimates(m2gls_free, ci=T), 
+         paste("real_data_maps/lavaan_out/YRI_DAG2_params_10kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""))
+  
+  fwrite(rbind.data.frame(names(fitMeasures(m2gls_free)),
+                          as.numeric(fitMeasures(m2gls_free))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG2_fitmeasures_10kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(lavTestLRT(m2gls, m2gls_free),
+         paste("real_data_maps/lavaan_out/LRT_DAG2_gw-equal-freechrom_10kb_", 
+               "latents_", m, ".csv", sep=""))
+  
   m2boot <- sem(model_2,
                 data=tbl_10kb,
                 fixed.x=F,
                 std.ov=T,
                 std.lv=T,
+                group="chrom",
+                group.equal="regressions",
                 estimator="ML",
                 test="boot",
                 se="boot")
   
-  fwrite(rbind.data.frame(names(inspect(m2boot, "r2")),
-                          as.numeric(inspect(m2boot, "r2"))), 
+  fwrite(rbind.data.frame(names(unlist(inspect(m2boot, "r2"))),
+                          as.numeric(unlist(inspect(m2boot, "r2")))), 
          paste("real_data_maps/lavaan_out/YRI_DAG2_r2_10kb_genomewide", 
                "_latents_", m, "_BOOT.csv", sep=""),
          col.names=F)
@@ -15396,6 +15488,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                std.ov=T,
                std.lv=T,
                group="chrom",
+               group.equal="regressions",
                estimator="GLS")
   
   fwrite(rbind.data.frame(names(unlist(inspect(m3gls, "r2"))),
@@ -15418,17 +15511,48 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
          paste("real_data_maps/lavaan_out/LRT_DAG2_DAG3_10kb_genomewide_", 
                "latents_", m, ".csv", sep=""))
   
+  m3gls_free <- sem(model_3,
+                    data=tbl_10kb,
+                    fixed.x=F,
+                    std.ov=T,
+                    std.lv=T,
+                    group="chrom",
+                    group.equal="none",
+                    estimator="GLS")
+  
+  fwrite(rbind.data.frame(names(unlist(inspect(m3gls_free, "r2"))),
+                          as.numeric(unlist(inspect(m3gls_free, "r2")))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG3_r2_10kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(parameterestimates(m3gls_free, ci=T), 
+         paste("real_data_maps/lavaan_out/YRI_DAG3_params_10kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""))
+  
+  fwrite(rbind.data.frame(names(fitMeasures(m3gls_free)),
+                          as.numeric(fitMeasures(m3gls_free))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG3_fitmeasures_10kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(lavTestLRT(m3gls, m3gls_free),
+         paste("real_data_maps/lavaan_out/LRT_DAG3_gw-equal-freechrom_10kb_", 
+               "latents_", m, ".csv", sep=""))
+
   m3boot <- sem(model_3,
                 data=tbl_10kb, 
                 fixed.x=F,
                 std.ov=T,
                 std.lv=T,
                 estimator="ML",
+                group="chrom",
+                group.equal="regressions",
                 test="boot",
                 se="boot")
   
-  fwrite(rbind.data.frame(names(inspect(m3boot, "r2")),
-                          as.numeric(inspect(m3boot, "r2"))), 
+  fwrite(rbind.data.frame(names(unlist(inspect(m3boot, "r2"))),
+                          as.numeric(unlist(inspect(m3boot, "r2")))), 
          paste("real_data_maps/lavaan_out/YRI_DAG3_r2_10kb_genomewide", 
                "_latents_", m, "_BOOT.csv", sep=""),
          col.names=F)
@@ -15636,8 +15760,8 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
 }
 
 # 100 kb
-for(m in unique(human_maps_1Mb$constrained_model)) { 
-  
+for(m in unique(human_maps_100kb$constrained_model)) { 
+
   print(paste(m, Sys.Date(), Sys.time()), sep="\t")
   cat(paste("100kb", m))
   cat("\n")
@@ -15656,16 +15780,16 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
            dplyr::select(., -constrained_model)
   
   tbl_100kb <- left_join(tbl_100kb, tmp_B, by=c("chrom", 
-                                                "chromStart", 
-                                                "chromEnd"))
+                                              "chromStart", 
+                                              "chromEnd"))
   
   tbl_100kb <- left_join(tbl_100kb, rec_latent_100kb, by=c("chrom", 
-                                                           "chromStart", 
-                                                           "chromEnd"))
+                                                        "chromStart", 
+                                                        "chromEnd"))
   
   tbl_100kb <- left_join(tbl_100kb, mut_latent_100kb, by=c("chrom", 
-                                                           "chromStart", 
-                                                           "chromEnd"))
+                                                        "chromStart", 
+                                                        "chromEnd"))
   
   tbl_100kb <- filter(tbl_100kb, coverage > 0.75)
   names(tbl_100kb)[8:10] <- c("B", "avg_rec", "avg_mut")
@@ -15683,6 +15807,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                std.ov=T,
                std.lv=T,
                group="chrom",
+               group.equal="regressions",
                estimator="GLS")
   
   fwrite(rbind.data.frame(names(unlist(inspect(m0gls, "r2"))),
@@ -15701,6 +15826,35 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                "latents_", m, ".csv", sep=""),
          col.names=F)
   
+  m0gls_free <- sem(model_0,
+                    data=tbl_100kb,
+                    fixed.x=F,
+                    std.ov=T,
+                    std.lv=T,
+                    group="chrom",
+                    group.equal="none",
+                    estimator="GLS")
+  
+  fwrite(rbind.data.frame(names(unlist(inspect(m0gls_free, "r2"))),
+                          as.numeric(unlist(inspect(m0gls_free, "r2")))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG0_r2_100kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(parameterestimates(m0gls_free, ci=T), 
+         paste("real_data_maps/lavaan_out/YRI_DAG0_params_100kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""))
+  
+  fwrite(rbind.data.frame(names(fitMeasures(m0gls_free)),
+                          as.numeric(fitMeasures(m0gls_free))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG0_fitmeasures_100kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(lavTestLRT(m0gls, m0gls_free),
+         paste("real_data_maps/lavaan_out/LRT_DAG0_gw-equal-freechrom_100kb_", 
+               "latents_", m, ".csv", sep=""))
+  
   model_1 <- "
   avg_pi ~ start(0.25)*c1*avg_mut
   avg_pi ~ start(0.5)*c2*B
@@ -15716,6 +15870,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                std.ov=T,
                std.lv=T,
                group="chrom",
+               group.equal="regressions",
                estimator="GLS")
   
   fwrite(rbind.data.frame(names(unlist(inspect(m1gls, "r2"))),
@@ -15733,6 +15888,35 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
          paste("real_data_maps/lavaan_out/YRI_DAG1_fitmeasures_100kb_genomewide_", 
                "latents_", m, ".csv", sep=""),
          col.names=F)
+  
+  m1gls_free <- sem(model_1,
+                    data=tbl_100kb,
+                    fixed.x=F,
+                    std.ov=T,
+                    std.lv=T,
+                    group="chrom",
+                    group.equal="none",
+                    estimator="GLS")
+  
+  fwrite(rbind.data.frame(names(unlist(inspect(m1gls_free, "r2"))),
+                          as.numeric(unlist(inspect(m1gls_free, "r2")))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG1_r2_100kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(parameterestimates(m1gls_free, ci=T), 
+         paste("real_data_maps/lavaan_out/YRI_DAG1_params_100kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""))
+  
+  fwrite(rbind.data.frame(names(fitMeasures(m1gls_free)),
+                          as.numeric(fitMeasures(m1gls_free))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG1_fitmeasures_100kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(lavTestLRT(m1gls, m1gls_free),
+         paste("real_data_maps/lavaan_out/LRT_DAG1_gw-equal-freechrom_100kb_", 
+               "latents_", m, ".csv", sep=""))
   
   model_2 <- "
   avg_pi ~ start(0.25)*c1*avg_mut
@@ -15755,6 +15939,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                std.ov=T,
                std.lv=T,
                group="chrom",
+               group.equal="regressions",
                estimator="GLS")
   
   fwrite(rbind.data.frame(names(unlist(inspect(m2gls, "r2"))),
@@ -15773,17 +15958,48 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                "latents_", m, ".csv", sep=""),
          col.names=F)
   
+  m2gls_free <- sem(model_2,
+                    data=tbl_100kb,
+                    fixed.x=F,
+                    std.ov=T,
+                    std.lv=T,
+                    group="chrom",
+                    group.equal="none",
+                    estimator="GLS")
+  
+  fwrite(rbind.data.frame(names(unlist(inspect(m2gls_free, "r2"))),
+                          as.numeric(unlist(inspect(m2gls_free, "r2")))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG2_r2_100kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(parameterestimates(m2gls_free, ci=T), 
+         paste("real_data_maps/lavaan_out/YRI_DAG2_params_100kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""))
+  
+  fwrite(rbind.data.frame(names(fitMeasures(m2gls_free)),
+                          as.numeric(fitMeasures(m2gls_free))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG2_fitmeasures_100kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(lavTestLRT(m2gls, m2gls_free),
+         paste("real_data_maps/lavaan_out/LRT_DAG2_gw-equal-freechrom_100kb_", 
+               "latents_", m, ".csv", sep=""))
+  
   m2boot <- sem(model_2,
                 data=tbl_100kb,
                 fixed.x=F,
                 std.ov=T,
                 std.lv=T,
+                group="chrom",
+                group.equal="regressions",
                 estimator="ML",
                 test="boot",
                 se="boot")
   
-  fwrite(rbind.data.frame(names(inspect(m2boot, "r2")),
-                          as.numeric(inspect(m2boot, "r2"))), 
+  fwrite(rbind.data.frame(names(unlist(inspect(m2boot, "r2"))),
+                          as.numeric(unlist(inspect(m2boot, "r2")))), 
          paste("real_data_maps/lavaan_out/YRI_DAG2_r2_100kb_genomewide", 
                "_latents_", m, "_BOOT.csv", sep=""),
          col.names=F)
@@ -15819,6 +16035,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                std.ov=T,
                std.lv=T,
                group="chrom",
+               group.equal="regressions",
                estimator="GLS")
   
   fwrite(rbind.data.frame(names(unlist(inspect(m3gls, "r2"))),
@@ -15841,17 +16058,48 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
          paste("real_data_maps/lavaan_out/LRT_DAG2_DAG3_100kb_genomewide_", 
                "latents_", m, ".csv", sep=""))
   
+  m3gls_free <- sem(model_3,
+                    data=tbl_100kb,
+                    fixed.x=F,
+                    std.ov=T,
+                    std.lv=T,
+                    group="chrom",
+                    group.equal="none",
+                    estimator="GLS")
+  
+  fwrite(rbind.data.frame(names(unlist(inspect(m3gls_free, "r2"))),
+                          as.numeric(unlist(inspect(m3gls_free, "r2")))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG3_r2_100kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(parameterestimates(m3gls_free, ci=T), 
+         paste("real_data_maps/lavaan_out/YRI_DAG3_params_100kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""))
+  
+  fwrite(rbind.data.frame(names(fitMeasures(m3gls_free)),
+                          as.numeric(fitMeasures(m3gls_free))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG3_fitmeasures_100kb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(lavTestLRT(m3gls, m3gls_free),
+         paste("real_data_maps/lavaan_out/LRT_DAG3_gw-equal-freechrom_100kb_", 
+               "latents_", m, ".csv", sep=""))
+
   m3boot <- sem(model_3,
-                data=tbl_100kb,
+                data=tbl_100kb, 
                 fixed.x=F,
                 std.ov=T,
                 std.lv=T,
                 estimator="ML",
+                group="chrom",
+                group.equal="regressions",
                 test="boot",
                 se="boot")
   
-  fwrite(rbind.data.frame(names(inspect(m3boot, "r2")),
-                          as.numeric(inspect(m3boot, "r2"))), 
+  fwrite(rbind.data.frame(names(unlist(inspect(m3boot, "r2"))),
+                          as.numeric(unlist(inspect(m3boot, "r2")))), 
          paste("real_data_maps/lavaan_out/YRI_DAG3_r2_100kb_genomewide", 
                "_latents_", m, "_BOOT.csv", sep=""),
          col.names=F)
@@ -15869,7 +16117,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
   fwrite(lavTestLRT(m2boot, m3boot),
            paste("real_data_maps/lavaan_out/LRT_DAG2_DAG3_100kb_genomewide",
                  "_latents_", m, "_BOOT.csv", sep=""))
-  
+    
   # one model per chrom
   for(c in 1:22) {
   
@@ -16079,18 +16327,18 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
            dplyr::select(., -constrained_model)
   
   tbl_1Mb <- left_join(tbl_1Mb, tmp_B, by=c("chrom", 
-                                            "chromStart", 
-                                            "chromEnd"))
+                                              "chromStart", 
+                                              "chromEnd"))
   
   tbl_1Mb <- left_join(tbl_1Mb, rec_latent_1Mb, by=c("chrom", 
-                                                     "chromStart", 
-                                                     "chromEnd"))
+                                                        "chromStart", 
+                                                        "chromEnd"))
   
   tbl_1Mb <- left_join(tbl_1Mb, mut_latent_1Mb, by=c("chrom", 
-                                                     "chromStart", 
-                                                     "chromEnd"))
+                                                        "chromStart", 
+                                                        "chromEnd"))
   
-  tbl_1Mb <- filter(tbl_1Mb, coverage > 0.5)
+  tbl_1Mb <- filter(tbl_1Mb, coverage > 0.75)
   names(tbl_1Mb)[8:10] <- c("B", "avg_rec", "avg_mut")
   
   # genome-wide models
@@ -16106,6 +16354,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                std.ov=T,
                std.lv=T,
                group="chrom",
+               group.equal="regressions",
                estimator="GLS")
   
   fwrite(rbind.data.frame(names(unlist(inspect(m0gls, "r2"))),
@@ -16124,6 +16373,35 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                "latents_", m, ".csv", sep=""),
          col.names=F)
   
+  m0gls_free <- sem(model_0,
+                    data=tbl_1Mb,
+                    fixed.x=F,
+                    std.ov=T,
+                    std.lv=T,
+                    group="chrom",
+                    group.equal="none",
+                    estimator="GLS")
+  
+  fwrite(rbind.data.frame(names(unlist(inspect(m0gls_free, "r2"))),
+                          as.numeric(unlist(inspect(m0gls_free, "r2")))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG0_r2_1Mb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(parameterestimates(m0gls_free, ci=T), 
+         paste("real_data_maps/lavaan_out/YRI_DAG0_params_1Mb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""))
+  
+  fwrite(rbind.data.frame(names(fitMeasures(m0gls_free)),
+                          as.numeric(fitMeasures(m0gls_free))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG0_fitmeasures_1Mb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(lavTestLRT(m0gls, m0gls_free),
+         paste("real_data_maps/lavaan_out/LRT_DAG0_gw-equal-freechrom_1Mb_", 
+               "latents_", m, ".csv", sep=""))
+  
   model_1 <- "
   avg_pi ~ start(0.25)*c1*avg_mut
   avg_pi ~ start(0.5)*c2*B
@@ -16139,6 +16417,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                std.ov=T,
                std.lv=T,
                group="chrom",
+               group.equal="regressions",
                estimator="GLS")
   
   fwrite(rbind.data.frame(names(unlist(inspect(m1gls, "r2"))),
@@ -16156,6 +16435,35 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
          paste("real_data_maps/lavaan_out/YRI_DAG1_fitmeasures_1Mb_genomewide_", 
                "latents_", m, ".csv", sep=""),
          col.names=F)
+  
+  m1gls_free <- sem(model_1,
+                    data=tbl_1Mb,
+                    fixed.x=F,
+                    std.ov=T,
+                    std.lv=T,
+                    group="chrom",
+                    group.equal="none",
+                    estimator="GLS")
+  
+  fwrite(rbind.data.frame(names(unlist(inspect(m1gls_free, "r2"))),
+                          as.numeric(unlist(inspect(m1gls_free, "r2")))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG1_r2_1Mb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(parameterestimates(m1gls_free, ci=T), 
+         paste("real_data_maps/lavaan_out/YRI_DAG1_params_1Mb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""))
+  
+  fwrite(rbind.data.frame(names(fitMeasures(m1gls_free)),
+                          as.numeric(fitMeasures(m1gls_free))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG1_fitmeasures_1Mb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(lavTestLRT(m1gls, m1gls_free),
+         paste("real_data_maps/lavaan_out/LRT_DAG1_gw-equal-freechrom_1Mb_", 
+               "latents_", m, ".csv", sep=""))
   
   model_2 <- "
   avg_pi ~ start(0.25)*c1*avg_mut
@@ -16178,6 +16486,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                std.ov=T,
                std.lv=T,
                group="chrom",
+               group.equal="regressions",
                estimator="GLS")
   
   fwrite(rbind.data.frame(names(unlist(inspect(m2gls, "r2"))),
@@ -16196,17 +16505,48 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                "latents_", m, ".csv", sep=""),
          col.names=F)
   
+  m2gls_free <- sem(model_2,
+                    data=tbl_1Mb,
+                    fixed.x=F,
+                    std.ov=T,
+                    std.lv=T,
+                    group="chrom",
+                    group.equal="none",
+                    estimator="GLS")
+  
+  fwrite(rbind.data.frame(names(unlist(inspect(m2gls_free, "r2"))),
+                          as.numeric(unlist(inspect(m2gls_free, "r2")))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG2_r2_1Mb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(parameterestimates(m2gls_free, ci=T), 
+         paste("real_data_maps/lavaan_out/YRI_DAG2_params_1Mb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""))
+  
+  fwrite(rbind.data.frame(names(fitMeasures(m2gls_free)),
+                          as.numeric(fitMeasures(m2gls_free))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG2_fitmeasures_1Mb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(lavTestLRT(m2gls, m2gls_free),
+         paste("real_data_maps/lavaan_out/LRT_DAG2_gw-equal-freechrom_1Mb_", 
+               "latents_", m, ".csv", sep=""))
+  
   m2boot <- sem(model_2,
                 data=tbl_1Mb,
                 fixed.x=F,
                 std.ov=T,
                 std.lv=T,
+                group="chrom",
+                group.equal="regressions",
                 estimator="ML",
                 test="boot",
                 se="boot")
   
-  fwrite(rbind.data.frame(names(inspect(m2boot, "r2")),
-                          as.numeric(inspect(m2boot, "r2"))), 
+  fwrite(rbind.data.frame(names(unlist(inspect(m2boot, "r2"))),
+                          as.numeric(unlist(inspect(m2boot, "r2")))), 
          paste("real_data_maps/lavaan_out/YRI_DAG2_r2_1Mb_genomewide", 
                "_latents_", m, "_BOOT.csv", sep=""),
          col.names=F)
@@ -16220,7 +16560,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
          paste("real_data_maps/lavaan_out/YRI_DAG2_fitmeasures_1Mb_genomewide", 
                "_latents_", m, "_BOOT.csv", sep=""),
          col.names=F)
-
+  
   model_3 <- "
   avg_pi ~ start(0.25)*c1*avg_mut
   avg_pi ~ start(0.5)*c2*B
@@ -16242,6 +16582,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
                std.ov=T,
                std.lv=T,
                group="chrom",
+               group.equal="regressions",
                estimator="GLS")
   
   fwrite(rbind.data.frame(names(unlist(inspect(m3gls, "r2"))),
@@ -16264,17 +16605,48 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
          paste("real_data_maps/lavaan_out/LRT_DAG2_DAG3_1Mb_genomewide_", 
                "latents_", m, ".csv", sep=""))
   
+  m3gls_free <- sem(model_3,
+                    data=tbl_1Mb,
+                    fixed.x=F,
+                    std.ov=T,
+                    std.lv=T,
+                    group="chrom",
+                    group.equal="none",
+                    estimator="GLS")
+  
+  fwrite(rbind.data.frame(names(unlist(inspect(m3gls_free, "r2"))),
+                          as.numeric(unlist(inspect(m3gls_free, "r2")))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG3_r2_1Mb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(parameterestimates(m3gls_free, ci=T), 
+         paste("real_data_maps/lavaan_out/YRI_DAG3_params_1Mb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""))
+  
+  fwrite(rbind.data.frame(names(fitMeasures(m3gls_free)),
+                          as.numeric(fitMeasures(m3gls_free))), 
+         paste("real_data_maps/lavaan_out/YRI_DAG3_fitmeasures_1Mb_genomewide_", 
+               "latents_", m, "_freechrom.csv", sep=""),
+         col.names=F)
+  
+  fwrite(lavTestLRT(m3gls, m3gls_free),
+         paste("real_data_maps/lavaan_out/LRT_DAG3_gw-equal-freechrom_1Mb_", 
+               "latents_", m, ".csv", sep=""))
+
   m3boot <- sem(model_3,
-                data=tbl_1Mb,
+                data=tbl_1Mb, 
                 fixed.x=F,
                 std.ov=T,
                 std.lv=T,
                 estimator="ML",
+                group="chrom",
+                group.equal="regressions",
                 test="boot",
                 se="boot")
   
-  fwrite(rbind.data.frame(names(inspect(m3boot, "r2")),
-                          as.numeric(inspect(m3boot, "r2"))), 
+  fwrite(rbind.data.frame(names(unlist(inspect(m3boot, "r2"))),
+                          as.numeric(unlist(inspect(m3boot, "r2")))), 
          paste("real_data_maps/lavaan_out/YRI_DAG3_r2_1Mb_genomewide", 
                "_latents_", m, "_BOOT.csv", sep=""),
          col.names=F)
@@ -16292,7 +16664,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
   fwrite(lavTestLRT(m2boot, m3boot),
            paste("real_data_maps/lavaan_out/LRT_DAG2_DAG3_1Mb_genomewide",
                  "_latents_", m, "_BOOT.csv", sep=""))
-  
+    
   # one model per chrom
   for(c in 1:22) {
   
@@ -16344,7 +16716,7 @@ for(m in unique(human_maps_1Mb$constrained_model)) {
     fwrite(parameterestimates(m1gls, ci=T), 
            paste("real_data_maps/lavaan_out/YRI_DAG1_params_1Mb_chr", 
                  c, "_latents_", m, ".csv", sep=""))
-  
+    
     model_2 <- "
     avg_pi ~ start(0.25)*c1*avg_mut
     avg_pi ~ start(0.5)*c2*B
@@ -16874,6 +17246,83 @@ r <- ggplot(data=chr_fitmeasures_latent,
 save_plot("real_data_maps/chr_gfi_latent.png", r, 
           base_height=10, base_width=20)
 
+# (Nested) model selection, genomewide models, free or equal chr regressions (LRT)
+
+paste("real_data_maps/lavaan_out/LRT_DAG0_gw-equal-freechrom_10kb_", 
+               "latents_", m, ".csv", sep="")
+
+LRT_gw_freechrom <- data.frame()
+for(m in unique(human_maps_10kb$constrained_model)) { 
+  for(d in 0:3) {
+
+    tmp <- fread(paste("real_data_maps/lavaan_out/LRT_DAG",
+                       d, "_gw-equal-freechrom_10kb_latents_", 
+                       m, ".csv", sep=""))
+    
+    df <- as.data.frame(tmp$`Pr(>Chisq)`[2],)  
+    df$constrained_model <- m
+    df$dag <- d
+    
+    LRT_gw_freechrom <- rbind.data.frame(LRT_gw_freechrom, df)
+  }
+}
+LRT_gw_freechrom$scale <- 1e+4
+
+## 100 kb
+LRT_gw_100kb_gls <- data.frame()
+LRT_gw_100kb_boot <- data.frame()
+for(m in unique(human_maps_100kb$constrained_model)) { 
+
+  tmp <- fread(paste("real_data_maps/lavaan_out/LRT_DAG2_DAG3_100kb_genomewide_",
+               "latents_", m, ".csv", sep=""))
+  
+  df <- as.data.frame(tmp$`Pr(>Chisq)`[2],)  
+  df$constrained_model <- m
+  df$method <- "GLS"
+  
+  LRT_gw_100kb_gls <- rbind.data.frame(LRT_gw_100kb_gls, df)
+  
+  tmp <- fread(paste("real_data_maps/lavaan_out/LRT_DAG2_DAG3_100kb_genomewide_",
+               "latents_", m, "_BOOT.csv", sep=""))
+  
+  df <- as.data.frame(tmp$`Pr(>Chisq)`[2],)  
+  df$constrained_model <- m
+  df$method <- "boot"
+  
+  LRT_gw_100kb_boot <- rbind.data.frame(LRT_gw_100kb_boot, df)
+}
+LRT_gw_100kb_gls$scale <- 1e+5
+LRT_gw_100kb_boot$scale <- 1e+5
+
+## 1 Mb
+LRT_gw_1Mb_gls <- data.frame()
+LRT_gw_1Mb_boot <- data.frame()
+for(m in unique(human_maps_1Mb$constrained_model)) { 
+
+  tmp <- fread(paste("real_data_maps/lavaan_out/LRT_DAG2_DAG3_1Mb_genomewide_",
+               "latents_", m, ".csv", sep=""))
+  
+  df <- as.data.frame(tmp$`Pr(>Chisq)`[2],)  
+  df$constrained_model <- m
+  df$method <- "GLS"
+  
+  LRT_gw_1Mb_gls <- rbind.data.frame(LRT_gw_1Mb_gls, df)
+  
+  tmp <- fread(paste("real_data_maps/lavaan_out/LRT_DAG2_DAG3_1Mb_genomewide_",
+               "latents_", m, "_BOOT.csv", sep=""))
+  
+  df <- as.data.frame(tmp$`Pr(>Chisq)`[2],)  
+  df$constrained_model <- m
+  df$method <- "boot"
+  
+  LRT_gw_1Mb_boot <- rbind.data.frame(LRT_gw_1Mb_boot, df)
+}
+LRT_gw_1Mb_gls$scale <- 1e+6
+LRT_gw_1Mb_boot$scale <- 1e+6
+
+gw_LRT_gls <- rbind.data.frame(LRT_gw_10kb_gls,
+                               LRT_gw_100kb_gls,
+                               LRT_gw_1Mb_gls)
 
 # (Nested) model selection, DAGs 2 and 3 (LRT)
 # (DAG 3 adds a covariance term between constrained sites and mutation rates)
@@ -17463,16 +17912,16 @@ gw_r2_mut <- pivot_longer(gw_r2, cols=ends_with(".avg_mut"))
 p <- ggplot(data=gw_r2_pi, 
             aes(x=name, 
                 y=value, 
-                color=mut_map,
-                shape=as.factor(DAG))) +
+                color=as.factor(DAG),
+                shape=method)) +
       geom_point(size=2) +
       facet_grid(scale~constrained_model, labeller=label_both) + theme_bw() + 
       scale_y_continuous(breaks=pretty_breaks()) + ylim(c(0,1)) +
       scale_x_discrete(labels=as.character(1:22)) +
-      scale_shape_manual(values=c(0, 1, 2), name="DAG") +
-      scale_color_manual(values=c("purple3", "seagreen4", "brown1"),
-                         name="Mut. Map") +
-      labs(title="Variance Explained in diversity (genome-wide model, DAGs 2-3)",
+      scale_shape_manual(values=c(0, 1)) +
+      scale_color_manual(values=c("purple3", "seagreen4"),
+                         name="DAG") +
+      labs(title="Variance Explained in diversity (genome-wide model, latents, DAGs 2-3)",
            x="Chromosome", y="Variance Explained") +
       theme(axis.title=element_text(size=16), 
             axis.text=element_text(size=12), 
@@ -17486,16 +17935,15 @@ save_plot("real_data_maps/gw_r2_pi_DAGs2-3.png", p,
 q <- ggplot(data=gw_r2_B, 
             aes(x=name, 
                 y=value, 
-                color=mut_map,
-                shape=as.factor(DAG))) +
+                color=as.factor(DAG),
+                shape=method)) +
       geom_point(size=2) +
       facet_grid(scale~constrained_model, labeller=label_both) + theme_bw() + 
       scale_y_continuous(breaks=pretty_breaks()) + ylim(c(0,1)) +
       scale_x_discrete(labels=as.character(1:22)) +
-      scale_shape_manual(values=c(0, 1, 2),
+      scale_shape_manual(values=c(0, 1)) +
+      scale_color_manual(values=c("purple3", "seagreen4"),
                          name="DAG") +
-      scale_color_manual(values=c("purple3", "seagreen4", "brown1"),
-                         name="Mut. Map") +
       labs(title="Variance Explained in B (genome-wide model, DAGs 2-3)",
            x="Chromosome", y="Variance Explained") +
       theme(axis.title=element_text(size=16), 
@@ -17510,16 +17958,15 @@ save_plot("real_data_maps/gw_r2_B_DAGs2-3.png", q,
 r <- ggplot(data=gw_r2_mut, 
             aes(x=name, 
                 y=value, 
-                color=mut_map,
-                shape=as.factor(DAG))) +
+                color=as.factor(DAG),
+                shape=method)) +
       geom_point(size=2) +
       facet_grid(scale~constrained_model, labeller=label_both) + theme_bw() + 
       scale_y_continuous(breaks=pretty_breaks()) + ylim(c(0,1)) +
       scale_x_discrete(labels=as.character(1:22)) +
-      scale_shape_manual(values=c(0, 1, 2), 
+      scale_shape_manual(values=c(0, 1)) +
+      scale_color_manual(values=c("purple3", "seagreen4"),
                          name="DAG") +
-      scale_color_manual(values=c("purple3", "seagreen4", "brown1"),
-                         name="Mut. Map") +
       labs(title="Variance Explained in mut. (genome-wide model, DAGs 2-3)",
            x="Chromosome", y="Variance Explained") +
       theme(axis.title=element_text(size=16), 
